--- a/README
+++ b/README
@@ -16,29 +16,56 @@ Features:
 Build instructions:
 - create a project directory somewhere (PROJECT_DIR)
 - $ cd PROJECT_DIR
-- $ git clone git://github.com/crystalnix/BitPop.git src
-  this will clone the repo to PROJECT_DIR/src directory
-  (you should use exact name "src")
+- create file named .gclient in current dir with following contents:
+
+solutions = [
+  { "name"        : "22.0.1229.96",
+    "url"         : "http://src.chromium.org/svn/releases/22.0.1229.96",
+    "deps_file"   : "DEPS",
+    "custom_deps" : {
+      "src/third_party/WebKit/LayoutTests": None,
+      "src/chrome/tools/test/reference_build/chrome": None,
+      "src/chrome_frame/tools/test/reference_build/chrome": None,
+      "src/chrome/tools/test/reference_build/chrome_linux": None,
+      "src/chrome/tools/test/reference_build/chrome_mac": None,
+    },
+    "safesync_url": "",
+  },
+]
+
 - install the depot_tools using
   http://dev.chromium.org/developers/how-tos/install-depot-tools
   as a reference
-- $ gclient config http://src.chromium.org/svn/releases/18.0.1025.151
-- Optionally: edit .gclient file replacing "custom_deps" entry with
-  "custom_deps": {
-    "src/third_party/WebKit/LayoutTests": None,
-    "src/chrome/tools/test/reference_build/chrome": None,
-    "src/chrome_frame/tools/test/reference_build/chrome": None,
-    "src/chrome/tools/test/reference_build/chrome_linux": None,
-    "src/chrome/tools/test/reference_build/chrome_mac": None,
-    "src/third_party/hunspell_dictionaries": None,
-  }
-  This will reduce the size of your checkout.
-- $ gclient sync
+- run: > gclient sync
+- $ git clone git://github.com/crystalnix/BitPop.git src_temp
+  this will clone the repo to PROJECT_DIR/src_temp directory
+- merge the ./src with ./src_temp, using ./src as a destination
+  i.e. (mac): > ditto ./src_temp ./src
+- > cd ./src
+- (mac) > ./build/gyp_chromium -Duse_proprietary_codecs=1 -Dffmpeg_branding=Chrome
+  (win) > gclient runhooks
 - Windows:
     - open src/chrome/chrome.sln
     - build one of the projects (you will possibly want to build "chrome")
     - do what you like with it
   Mac:
+    - Use XCode 3.2.6!!!
     - $ cd src/chrome
     - $ xcodebuild -project chrome.xcodeproj -configuration Debug -target chrome
     - do what you like with a build in src/xcodebuild/Debug
+- (mac) Useful ~/.bash_profile features:
+>>>
+BITPOP_PROJECT=~/dev/houseoflife
+alias dbghooks="GYP_DEFINES='branding=Chromium buildtype=Dev' $BITPOP_PROJECT/src/build/gyp_chromium -Dproprietary_codecs=1 -Dffmpeg_branding=Chrome"
+alias offhooks="GYP_DEFINES='branding=Chromium buildtype=Official' $BITPOP_PROJECT/src/build/gyp_chromium -Dproprietary_codecs=1 -Dffmpeg_branding=Chrome"
+alias cdroot="cd $BITPOP_PROJECT"
+alias cdsrc="cd $BITPOP_PROJECT/src"
+alias cdchrome="cd $BITPOP_PROJECT/src/chrome"
+alias cddebug="cd $BITPOP_PROJECT/src/xcodebuild/Debug"
+alias cdrelease="cd $BITPOP_PROJECT/src/xcodebuild/Release"
+function rundebug() { "$BITPOP_PROJECT/src/xcodebuild/Debug/BitPop.app/Contents/MacOS/BitPop" $@; }
+function runrelease() { "$BITPOP_PROJECT/src/xcodebuild/Release/BitPop.app/Contents/MacOS/BitPop" $@; }
+alias runrel="runrelease --show-component-extension-options --enable-logging=1 --v=2"
+alias builddebug="WD=\$(pwd) && cd \"$BITPOP_PROJECT/src/chrome\" && xcodebuild -project chrome.xcodeproj -configuration Debug -target chrome; cd \"\$WD\""
+alias buildrelease="WD=\$(pwd) && cd \"$BITPOP_PROJECT/src/chrome\" && xcodebuild -project chrome.xcodeproj -configuration Release -target build_app_dmg; cd \"\$WD\""
+<<<
